@@ -20,15 +20,13 @@ _use_clang=0           # Use clang compiler. Results in faster build and smaller
 ## -- Package and components information -- ##
 ##############################################
 pkgname='chromium-dev'
-pkgver='21.0.1145.0'
+pkgver='21.0.1155.2'
 pkgrel='1'
 pkgdesc='The open-source project behind Google Chrome (Dev channel)'
 arch=('i686' 'x86_64')
 url='http://www.chromium.org/'
 license=('BSD')
-depends=('dbus-glib' 'alsa-lib' 'hicolor-icon-theme' 'libevent' 'libxss' 'nss'
-        'libxslt' 'udev' 'desktop-file-utils' 'gtk2' 'speex' 'flac' 'libwebp'
-        'libpng' 'libjpeg' 'icu')
+depends=('dbus-glib' 'alsa-lib' 'hicolor-icon-theme' 'libevent' 'libxss' 'nss' 'libxslt' 'udev' 'desktop-file-utils' 'gtk2' 'speex' 'flac' 'libwebp' 'libpng' 'libjpeg' 'icu' 'libusb')
 makedepends=('python2' 'gperf' 'yasm' 'mesa' 'bison' 'xdg-utils' 'elfutils' 'subversion')
 install="${pkgname}".install
 backup=('etc/chromium-dev/default')
@@ -40,7 +38,7 @@ source=("http://commondatastorage.googleapis.com/chromium-browser-official/chrom
         'gcc47v3.diff'
         'sqlite-3.7.6.3-fix-out-of-scope-memory-reference.patch'
         'ipc-fix.diff')
-sha1sums=('efe37c6b762982fca9f2c2b3669ade85f263ad0e'
+sha1sums=('7858fb6f6d2010aec30e2d6dea43b50d92ec3d6f'
           '004d7496d7e08d96bb884748a9e55cd71cf78cee'
           '54c53502c26456c9735e67314b2d61e29477438e'
           'd6d2da45c0729dfd1c606a15c8ffb7591dbc7b44'
@@ -124,7 +122,6 @@ build() {
 
     msg "Remove unnecesary components"
     find third_party -type f \! -iname '*.gyp*' \
-        \! -path 'third_party/adobe/*' \
         \! -path 'third_party/angle/*' \
         \! -path 'third_party/cacheinvalidation/*' \
         \! -path 'third_party/cld/*' \
@@ -136,18 +133,16 @@ build() {
         \! -path 'third_party/hunspell/*' \
         \! -path 'third_party/iccjpeg/*' \
         \! -path 'third_party/jsoncpp/*' \
-        \! -path 'third_party/json_minify/*' \
         \! -path 'third_party/khronos/*' \
         \! -path 'third_party/launchpad_translations/*' \
-        \! -path 'third_party/leveldb/*' \
         \! -path 'third_party/leveldatabase/*' \
         \! -path 'third_party/libjingle/*' \
         \! -path 'third_party/libphonenumber/*' \
         \! -path 'third_party/libsrtp/*' \
-        \! -path 'third_party/libusb/*' \
+        \! -path 'third_party/libusb/libusb.h' \
         \! -path 'third_party/libvpx/*' \
         \! -path 'third_party/libyuv/*' \
-        \! -path 'third_party/libxml/*' \
+        \! -path 'third_party/libxml/chromium/*' \
         \! -path 'third_party/llvm-build/*' \
         \! -path 'third_party/lss/*' \
         \! -path 'third_party/mesa/*' \
@@ -164,7 +159,6 @@ build() {
         \! -path 'third_party/smhasher/*' \
         \! -path 'third_party/speex/speex.h' \
         \! -path 'third_party/sqlite/*' \
-        \! -path 'third_party/tcmalloc/*' \
         \! -path 'third_party/tlslite/*' \
         \! -path 'third_party/undoview/*' \
         \! -path 'third_party/v8-i18n/*' \
@@ -172,12 +166,14 @@ build() {
         \! -path 'third_party/webgl_conformance/*' \
         \! -path 'third_party/WebKit/*' \
         \! -path 'third_party/webrtc/*' \
-        \! -path 'third_party/zlib/*' \
+        \! -path 'third_party/zlib/contrib/minizip/*' \
         -delete
+    # Make it possible to remove third_party/adobe
+    echo > "${srcdir}"/flapper_version.h
 
     msg "Misc patches"
     # zlib-1.2.5.1-r1 renames the OF macro in zconf.h, bug #383371 (Gentoo).
-    sed '1i#define OF(x) x' third_party/zlib/contrib/minizip/{ioapi,{,un}zip}.c -i chrome/common/zip*.cc
+    sed '1i#define OF(x) x' -i third_party/zlib/contrib/minizip/{ioapi,{,un}zip}.h
 
     msg "Segmentation faults in sqlite on history thread when compiled with gcc-4.7: http://crbug.com/122525"
     patch --silent -p0 -E -i "${srcdir}"/sqlite-3.7.6.3-fix-out-of-scope-memory-reference.patch
@@ -227,6 +223,8 @@ build() {
     # use_system_v8=1 (to use need update V8 to +3.9.13)
     # use_system_vpx=1 (TODO)
     # use_system_ffmpeg=1 (TODO)
+    # disable_glibc=1 (https://bugs.gentoo.org/show_bug.cgi?id=417019)
+    # linux_use_tcmalloc=0 (https://bugs.gentoo.org/show_bug.cgi?id=413637)
 
     GYP_DEFINES="\
         werror= \
@@ -236,34 +234,38 @@ build() {
         release_extra_cflags=\""${CFLAGS}"\" \
         ffmpeg_branding=Chrome \
         proprietary_codecs=1 \
-        use_system_vpx=0 \
-        use_system_speex=1 \
-        use_system_flac=1 \
-        use_system_libwebp=1 \
-        use_system_libxslt=1 \
-        use_system_libxml=1 \
         use_system_bzip2=1 \
-        use_system_zlib=1 \
-        use_system_libexpat=1 \
-        use_system_v8=0 \
-        use_system_sqlite=0 \
-        use_system_libpng=1 \
-        use_system_libjpeg=1 \
-        use_system_yasm=1 \
-        use_system_libevent=1 \
+        use_system_flac=1 \
         use_system_icu=1 \
-        use_system_xdg_utils=1 \
-        use_system_ssl=0 \
+        use_system_libevent=1 \
+        use_system_libexpat=1 \
+        use_system_libjpeg=1 \
+        use_system_libpng=1 \
+        use_system_libusb=1
+        use_system_libwebp=1 \
+        use_system_libxml=1 \
+        use_system_libxslt=1 \
         use_system_hunspell=0 \
-        use_pulseaudio="${_use_pulseaudio}" \
+        use_system_speex=1 \
+        use_system_sqlite=0 \
+        use_system_ssl=0 \
+        use_system_v8=0 \
+        use_system_vpx=0 \
+        use_system_xdg_utils=1 \
+        use_system_yasm=1 \
+        use_system_zlib=1 \
         use_gconf="${_use_gnome}" \
         use_gnome_keyring="${_use_gnome}" \
+        use_pulseaudio="${_use_pulseaudio}" \
         linux_link_gnome_keyring="${_use_gnome}" \
         target_arch="${_chromium_arch}" \
         linux_strip_binary=1 \
         remove_webcore_debug_symbols=1 \
         linux_use_gold_binary=0 \
         linux_use_gold_flags=0 \
+        linux_use_tcmalloc=0 \
+        disable_glibc=1 \
+        flapper_version_h_file="${srcdir}"/flapper_version.h \
     "
     [ "${CARCH}" = "i686" ] && GYP_DEFINES+="disable_sse2=1 "
     [ "${_use_nacl}" = "0" ] && GYP_DEFINES+="disable_nacl=1 "
