@@ -1,7 +1,7 @@
 # Contributor: matthiaskrgr <matthiaskrgr _strange_curverd_character_ freedroid D0T org>
 
 pkgname=gource-git
-pkgver=20120505
+pkgver=20120530
 pkgrel=1
 pkgdesc="software version control visualization"
 license=('GPL3')
@@ -14,7 +14,7 @@ conflicts=('gource')
 provides=('gource')
 changelog=changelog
 source=('changelog')
-sha1sums=('768ccb441bd921f8a5d17c2ae49fecd5d57d06a8')
+sha1sums=('d1319086d9762adb3a3be8f6b9437ca50106a37f')
 
 _gitroot="git://github.com/acaudwell/Gource.git"
 _gitname="gource"
@@ -28,8 +28,6 @@ build() {
 		cd $_gitname
 		git clean -dfx
 		msg "Updating..."
-		git submodule init
-		git submodule update
 		git pull origin
 		msg "The local files are updated."
 	else
@@ -41,8 +39,8 @@ build() {
 	msg "Starting make..."
 	cd "$srcdir"/"$_gitname"
 
-	msg "Running autoreconf..."
-	autoreconf -f -i
+	msg "Running autogen.sh..."
+	./autogen.sh
 	msg "Running configure..."
 	./configure --prefix=/usr --with-tinyxml
 	msg "Running make..."
