@@ -5,14 +5,14 @@ _licensefile=LICENSE
 # PKGBUILD options/directives
 pkgname=haskell-tagsoup
 pkgver=0.12.6
-pkgrel=1
+pkgrel=2
 pkgdesc="Parsing and extracting information from (possibly malformed) HTML/XML documents"
 url="http://community.haskell.org/~ndm/tagsoup/"
 license=("BSD3")
 arch=('i686' 'x86_64')
 makedepends=()
-depends=("ghc=7.0.3-2"
-         "haskell-text=0.11.0.5-2.1")
+depends=("ghc=7.4.1-2"
+         "haskell-text=0.11.1.13-1")
 options=('strip')
 source=("http://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
 install="${pkgname}.install"
