@@ -1,8 +1,9 @@
 # Maintainer: Serge Ziryukin <ftrvxmtrx@gmail.com>
 
 pkgname=ocaml-postgresql
+_pkgname=postgresql-ocaml
 pkgver=1.18.0
-pkgrel=1
+pkgrel=2
 pkgdesc="OCaml interface to the PostgreSQL database"
 arch=('i686' 'x86_64')
 url=("http://www.ocaml.info/home/ocaml_sources.html")
@@ -10,10 +11,10 @@ license=('LGPL')
 depends=('ocaml' 'ocaml-findlib' 'postgresql')
 makedepends=('ocaml' 'texlive-core' 'texlive-latexextra' 'ghostscript')
 conflicts=('postgresql-ocaml')
-source=(http://hg.ocaml.info/release/postgresql-ocaml/archive/release-${pkgver}.tar.bz2)
-md5sums=('f6a07ff34347a1ad552c1f663f7e90ed')
+source=(https://bitbucket.org/mmottl/${_pkgname}/downloads/${_pkgname}-${pkgver}.tar.gz)
+md5sums=('36e30fc919314d3f0e6307f1e5cca69d')
 
-_pkgdir="postgresql-ocaml-release-${pkgver}"
+_pkgdir="${_pkgname}-${pkgver}"
 
 build () {
   OCAMLFIND_DESTDIR="${pkgdir}$(ocamlfind printconf destdir)"
