@@ -1,7 +1,7 @@
 # Maintainer: Serge Ziryukin <ftrvxmtrx@gmail.com>
 
 pkgname=ocaml-sqlite3
-pkgver=1.6.1
+pkgver=1.6.3
 pkgrel=1
 pkgdesc="SQLite3 bindings for OCaml"
 arch=('i686' 'x86_64')
@@ -9,14 +9,14 @@ url=("http://www.ocaml.info/home/ocaml_sources.html")
 license=('MIT')
 depends=('ocaml' 'ocaml-findlib' 'sqlite3')
 makedepends=('ocaml')
-source=(http://hg.ocaml.info/release/ocaml-sqlite3/archive/release-${pkgver}.tar.bz2
+source=(https://bitbucket.org/mmottl/sqlite3-ocaml/downloads/sqlite3-ocaml-${pkgver}.tar.gz
   install-fix.patch)
-md5sums=('f51ef6ae3402ac28582d7c44b5b4f941'
+md5sums=('bb27e99eed1c35989854272f7e83a232'
          '068b3ae114220b7820c9d9a8e5b56eee')
 install=ocaml-sqlite3.install
 options=(!makeflags)
 
-_pkgdir="${pkgname}-release-${pkgver}"
+_pkgdir="sqlite3-ocaml-${pkgver}"
 
 build () {
   OCAMLFIND_DESTDIR="${pkgdir}$(ocamlfind printconf destdir)"
