@@ -1,23 +1,23 @@
-# Contributor: Christopher Daley <crdaley (at) gmail>
-# Maintainer:  Jesse Jaara	 <jesse.jaara@gmail.com>
+# Contributor: Allen Li <darkfeline (at) abagofapples.com>
 
 pkgname=projectm-libvisual-alsa
-pkgver=2.0.1
+pkgver=2.1.0
 pkgrel=1
-pkgdesc="A Music visualizer using alsa input and libvisual"
-url="http://xmms-projectm.sourceforge.net"
+pkgdesc="A music visualizer using alsa input and libvisual"
+url="http://projectm.sourceforge.net"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('libvisual-projectm' 'sdl')
-makedepends=('cmake')
-source=(http://sourceforge.net/projects/projectm/files/$pkgver/projectM-libvisual-alsa-$pkgver-Source.tar.gz/download)
-md5sums=('0daf5da7a729d9a274f8b8c22a405610')
+groups=('projectm-pulse')
+depends=('libvisual' 'libgl' 'sdl')
+makedepends=('pkgconfig' 'xproto' 'cmake')
+source=(http://sourceforge.net/projects/projectm/files/$pkgver/projectM-libvisual-alsa-$pkgver-Source.tar.gz)
+md5sums=(7d7e7fdbfc9667961fbbbbe9dd089fb7)
 
 build() {
   cd $srcdir/projectM-libvisual-alsa-$pkgver-Source
-
-  cmake -DCMAKE_INSTALL_PREFIX=/usr .  || return 1
-  make || return 1
-  make DESTDIR=$pkgdir install || return 1
+  cmake -D CMAKE_BUILD_TYPE=RELEASE CMAKE_INSTALL_PREFIX=/usr/local .
+  make
+  make DESTDIR=$pkgdir install
+  sed -i '/Exec/sx/usr/binx/usr/local/binx' "$pkgdir/usr/local/share/applications/projectM-libvisual-alsa.desktop"
 }
 
