@@ -1,7 +1,7 @@
 # Maintainer: alejandrogomez <alejandroogomez@gmail.com>
 
 pkgname=turses
-pkgver=0.1.17
+pkgver=0.1.18
 pkgrel=1
 pkgdesc="A Twitter client featuring a sexy curses interface"
 arch=('any')
@@ -9,7 +9,7 @@ url="http://pypi.python.org/pypi/turses/"
 license=('GPLv3')
 depends=('ncurses' 'python2' 'python2-oauth2' 'tweepy' 'python2-urwid' 'python2-distribute')
 source=(http://pypi.python.org/packages/source/t/$pkgname/$pkgname-$pkgver.tar.gz)
-md5sums=('e2cf0860de62a57806804bee009b2306')
+md5sums=('063faa0c21f72b376776ba4ff2ef7b65')
 
 build() {
    cd "$srcdir/$pkgname-$pkgver"
