@@ -2,7 +2,7 @@
 
 pkgname=yturl-git
 pkgver=20120512
-pkgrel=3
+pkgrel=4
 pkgdesc="A simple media URL grabber for YouTube."
 arch=(any)
 url="http://github.com/cdown/yturl"
