@@ -1,3 +1,5 @@
+Version 20120530
+ * Use autogen.sh
 Version 20120505
  * Makedependencies: glmath -> glm
 Version 20120412
